luigi house but it mansion complete

--- a/index.html
+++ b/index.html
@@ -2,9 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Your Page Title</title>
+  <title>Luigi House But it mansion</title>
 </head>
 <body>
+  <header id="top" >
+    <h1>Serena Rogers</h1>
+    <h2>Luigi House But it mansion</h2>
+  </header>
+  <article>
+    <p>My name is Serena and im here to talk about Luigi House</p>
+    <h3>but it mansion</h3>
+
+    <h3>Luigi House But It Mansion</h3>
+      <ul>
+        <li>Luigi</li>
+        <li>House</li>
+        <li>But</li>
+        <li>it</li>
+        <li>Mansion</li>
+        <li><a href="https://packaged-media.redd.it/82ybc0li6tmf1/pb/m2-res_488p.mp4?m=DASHPlaylist.mpd&v=1&e=1760565600&s=e0c4fa7b28e3620a18bc08da5439044db42c4e7d">BOO</a></li>
+      </ul>
+
+    <h3>Mansion It But House Luigi</h3>
+      <ol>
+        <li><a href="contact.html">Link</a></li>
+        <li>Mansion</li>
+        <li>It</li>
+        <li>But</li>
+        <li>House</li>
+        <li>Luigi</li>
+      </ol>
+    <button><h3>Mansion</h3></button>
+  </article>
+  <footer id="bottom">
+    <p>Wehrmacht <a href="#bottom">you would this this brings you to the top. but remember, this Luigi House</a></p>
+    <p>Luigi House But It Mansion <a href="#top">SwawS</a></p>
+  </footer>
 
   <!-- Your content goes here -->
 
